# yt-shorts-scraper

./: LICENSE  README.md  config.yml  production.yml  pyproject.toml
app/: __init__.py  __main__.py  config.py  models.py  utils.py
app/v1/: __init__.py  models.py  routes.py  utils.py
configs/: README.md
configs/services/: yt-shorts-scraper.service
docs/: DESCRIPTION.md
servers/: proxy.py  static.py
tests/: test_v1.py
