[project]
name = "yt-shorts-scraper"
version = "0.2.1"
description = "YouTube Shorts metadata + temp audio extraction microservice."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]==0.136.0",
    "innertube",
    "requests>=2.31.0",
    "yt-dlp-bonus>=0.2.8",
]

[tool.ruff]
line-length = 82

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "FA",
    "UP",
    "RUF100",
]
ignore = [
    "UP031",
    "F401",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.uv.sources]
innertube = { git = "https://github.com/Simatwa/innertube.git" }
